...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/KunuElevatedCoordinatorLayout"
    tools:context=".ui.list.DogGridFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:elevation="5dp"
        android:layout_height="192dp"
        android:layout_width="match_parent"
        tools:targetApi="lollipop">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/kunu_doglist_collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/kunu_doglist_toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/KunuHeadTextTextAppearance"
            app:collapsedTitleTextAppearance="@style/KunuStatusBarTextAppearance"
...
